--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uniqid": "^5.3.2",
     "tailwindcss": "^3.2.4"
   }
 }
